WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44456
JSON.stringify is much slower than Firefox on particular pathological input
https://bugs.webkit.org/show_bug.cgi?id=44456
Summary
JSON.stringify is much slower than Firefox on particular pathological input
Oliver Hunt
Reported
2010-08-23 14:41:15 PDT
JSON.stringify is much slower than Firefox on particular pathological input
Attachments
Patch
(2.54 KB, patch)
2010-08-23 14:43 PDT
,
Oliver Hunt
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2010-08-23 14:43:28 PDT
Created
attachment 65163
[details]
Patch
Mark Rowe (bdash)
Comment 2
2010-08-23 14:45:11 PDT
Comment on
attachment 65163
[details]
Patch Please do not check in the changes to JavaScriptCore.xcodeproj/project.pbxproj. You’re not otherwise modifying that file so there’s no sense in thrashing it.
Oliver Hunt
Comment 3
2010-08-23 14:59:21 PDT
Committed
r65834
: <
http://trac.webkit.org/changeset/65834
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug