2010-08-23  Oliver Hunt  <oliver@apple.com>

Reviewed by Gavin Barraclough.

        JSON.stringify is much slower than Firefox on particular pathological input
        https://bugs.webkit.org/show_bug.cgi?id=44456

        Make StringBuilder::reserveCapacity reserve additional space so we don't end up
        repeatedly copying the entire result string.

        * runtime/StringBuilder.h:
        (JSC::StringBuilder::append):
        (JSC::StringBuilder::reserveCapacity):

Canonical link: https://commits.webkit.org/56613@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65834 268f45cc-cd09-0410-ab3c-d52691b4dbfc